# devlama

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  BIELIK.txt  DependencyManager.py  Dockerfile  Dockerfile.test  MANIFEST.in  Makefile  OllamaRunner.py  README.md  SQL.txt  TODO.txt  devlama-cli  devlama_cli.py  diagnose.py  docker-compose.test.yml  env.example  models.py  models.sh  pybox  pylama-cli  pylama.py  pylama_cli.py  pyllm  pyproject.toml  requirements.txt  run_docker_tests.sh  sandbox.py  setup.py  setup.sh  templates.py
ansible_tests/: main_playbook.yml  model_operations_tests.yml  pylama_test_playbook.yml  query_operations_tests.yml  run_tests.yml
ansible_tests/inventory/: local
ansible_tests/playbooks/: apilama_tests.yml  integration_tests.yml  pybox_tests.yml  pyllm_tests.yml  weblama_tests.yml
ansible_tests/templates/: report_template.html.j2
devlama/: cli.py  devlama.py
devlama/ecosystem/: cli.py  config.py  ecosystem_manager.py  service_utils.py
examples/: markdown_code_executor.py  markdown_code_fixer.py  mermaid_codeblocks.md  mermaid_codeblocks_fixed.md  mermaid_codeblocks_manually_fixed.md
pylama/: OllamaRunner.py  __init__.py  api.py  cli.py  ecosystem.py  logging_config.py  pylama.py
pylama/ecosystem/: cli.py  config.py  ecosystem_manager.py  log_manager.py  logging_config.py  port_utils.py  service_utils.py
pylama/examples/: web_server.py
sandbox/: __init__.py  code_analyzer.py  dependency_manager.py  docker_sandbox.py  examples.py  python_sandbox.py  sandbox_manager.py  utils.py
tests/: __init__.py  run_tests.py  test_basic.py  test_cli.py  test_devlama.py  test_diagnose.py  test_docker_sandbox.py  test_docker_sandbox_fixed.py  test_interactive.py  test_ollama_runner.py  test_pybox_integration.py  test_pylama.py  test_sandbox.py  test_sandbox_fixed.py  test_templates.py
