[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pylama"
version = "0.1.0"
description = "Python code generation and execution using Ollama language models"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/pylama"
documentation = "https://github.com/py-lama/pylama#readme"
keywords = ["ai", "code-generation", "ollama", "python"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
selenium = "^4.10.0"
webdriver-manager = "^4.0.0"
pyautogui = "^0.9.54"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.poetry.scripts]
pylama = "pylama.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=pylama --cov-report=term-missing"

[project.scripts]
pylama = "pylama.pylama:main"
