[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "devlama"
version = "0.1.17"
description = "Python code generation and execution using Ollama language models"
authors = [ "John Doe <john.doe@example.com>", "Jane Doe <jane.doe@example.com>",]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/py-lama/devlama"
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Topic :: Software Development :: Code Generators", "Topic :: Software Development :: Libraries :: Python Modules",]

[tool.black]
line-length = 88
target-version = [ "py38",]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88

[project.urls]
Homepage = "https://github.com/py-lama/devlama"
Documentation = "https://py-lama.github.io/devlama/"
Repository = "https://github.com/py-lama/devlama"
Changelog = "https://github.com/py-lama/devlama/blob/main/CHANGELOG.md"
Tracker = "https://github.com/py-lama/devlama/issues"
Download = "https://pypi.org/project/devlama/"

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.31.0"
python-dotenv = ">=1.0.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.scripts]
devlama = "devlama.cli:main"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test_*.py"
addopts = "--cov=devlama --cov-report=term-missing"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.7.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.1"
